# strands-session-viewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  UI_REDESIGN_PLAN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
src/strands_viewer/: __init__.py  __version__.py  ai_analysis.py  cli.py  export_formatter.py  server.py  session_reader.py
src/strands_viewer/models/: __init__.py  models.py
src/strands_viewer/static/: index.html  index.html.backup
tests/: conftest.py  test_cli.py  test_export.py  test_server.py  test_session_reader.py
