[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-session-viewer"
version = "0.1.0"
description = "A browser-based viewer for Strands agent sessions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Strands Community"}
]
keywords = [
    "strands",
    "agents",
    "viewer",
    "debugging",
    "ai",
    "llm",
    "session-viewer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "httpx>=0.25.0",  # Required for FastAPI test client
]

[project.urls]
Homepage = "https://github.com/labeveryday/strands-session-viewer"
Documentation = "https://github.com/labeveryday/strands-session-viewer#readme"
Repository = "https://github.com/labeveryday/strands-session-viewer"
Issues = "https://github.com/labeveryday/strands-session-viewer/issues"

[project.scripts]
strands-viewer = "strands_viewer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/strands_viewer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
